syntax = "proto3";

package opendut.model.peer;

import "opendut/model/cluster/cluster.proto";
import "opendut/model/util/net.proto";

message PeerState {
  PeerConnectionState connection = 1;
  PeerMemberState member = 2;
}

message PeerConnectionState {
  oneof state {
    PeerOnline online = 1;
    PeerOffline offline = 2;
  }
}

message PeerOffline { }
message PeerOnline {
  opendut.model.util.IpAddress remote_host = 1;
}

message PeerMemberState {
  oneof state {
    PeerMemberAvailable available = 1;
    PeerMemberBlocked blocked = 2;
  }
}

message PeerMemberAvailable { }
message PeerMemberBlocked {
  opendut.model.cluster.ClusterId by_cluster = 1;
}


/* TODO: to be deleted
message PeerStateUp {
  oneof inner {
    PeerStateUpAvailable available = 1;
    PeerStateUpBlocked blocked = 2;
  }
  opendut.model.util.IpAddress remote_host = 10;
}

message PeerStateUpAvailable {}
    
message PeerStateUpBlocked {
  oneof inner {
    PeerStateUpBlockedDeploying deploying = 1;
    PeerStateUpBlockedMember member = 2;
    PeerStateUpBlockedUndeploying undeploying = 3;
  }
  opendut.model.cluster.ClusterId by_cluster = 10;
}

message PeerStateUpBlockedDeploying {}

message PeerStateUpBlockedMember {}

message PeerStateUpBlockedUndeploying {}
*/
